<resources>
    <!--App-->
    <string name="app_description">Staircase explorer</string>

    <!--Navigation-->
    <string name="menu_unlock">Unlock</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_settings">Settings</string>

    <!--Unlock-->
    <string name="btn_title_prime">Prime</string>
    <string name="btn_title_unlock">Unlock</string>

    <!--Preferences-->
    <string name="pref_group_title_account">Account</string>
    <string name="pref_title_sign_out">Sign out</string>
    <string name="pref_summary_sign_out">Sign out of app</string>
    <string name="pref_title_delete">Delete account</string>
    <string name="pref_summary_delete">Completely remove account from Firebase</string>

    <string name="pref_group_title_notifications">Notifications</string>

    <string name="pref_title_notif_subscriptions">Subscriptions</string>
    <string name="pref_summary_notif_subscriptions">Notifications you have subscribed to</string>
    <string-array name="notif_subscriptions_entries">
        <item>Door opened</item>
        <item>Door closed</item>
        <item>Handset activated</item>
        <item>Handset deactivated</item>
        <item>Primed</item>
        <item>Unprimed</item>
        <item>Unlocked</item>
    </string-array>
    <string-array name="notif_subscriptions_values">
        <item>door-opened</item>
        <item>door-closed</item>
        <item>handset-activated</item>
        <item>handset-deactivated</item>
        <item>primed</item>
        <item>unprimed</item>
        <item>unlocked</item>
    </string-array>
    <string-array name="pref_notif_subscriptions_default">
        <item>handset-activated</item>
        <item>handset-deactivated</item>
        <item>primed</item>
        <item>unlocked</item>
    </string-array>

    <string name="pref_title_vibrate_tune">Vibration tune</string>
    <string-array name="pref_entries_vibrate_tunes">
        <item>Standard</item>
        <item>Star Wars</item>
        <item>Super Mario</item>
        <item>James Bond</item>
    </string-array>
    <string-array name="pref_entry_values_vibrate_tunes">
        <item>STANDARD</item>
        <item>STAR_WARS</item>
        <item>SUPER_MARIO</item>
        <item>JAMES_BOND</item>
    </string-array>

    <string name="pref_group_title_about">About</string>
    <string name="pref_title_licenses">Open source licenses</string>
    <string name="pref_title_build">Build</string>

    <string name="sign_out_success">Signed out</string>
    <string name="sign_out_failure">Sign out failed</string>
    <string name="delete_account_success">Account deleted</string>
    <string name="delete_account_failure">Could not delete account</string>

    <!--Notifications-->
    <string name="notif_title_unlock_success">Door unlocked</string>
    <string name="notif_text_unlock_success">Go inside.</string>
    <string name="notif_title_unlock_failed">Door failed to open</string>
    <string name="notif_text_unlock_failed">Try calling again.</string>
    <string name="notif_title_handset_ringing">Handset ringing</string>
    <string name="notif_action_title_unlock">Unlock</string>

    <!--Device status-->
    <string name="status_unknown">Unknown</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    <string name="status_primed">Primed</string>
    <string name="status_door_open">Door open</string>

    <!--Event messages-->
    <string name="event_unlock_success">Door unlocked</string>
    <string name="event_unlock_fail">Door failed to unlock</string>
    <string name="event_prime_in_progress">Priming</string>
    <string name="event_prime_success">Primed</string>
    <string name="event_prime_fail">Prime failed</string>
    <string name="event_unlock_in_progress">Unlocking</string>

    <!--Shortcuts-->
    <string name="shortcut_prime_label">Prime</string>
    <string name="shortcut_unlock_label">Unlock</string>
    <string name="shortcut_logs_label">Logs</string>

    <!--Other-->
    <string name="coming_soon">Coming Soon</string>
</resources>
