<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_group_title_account">

        <PreferenceScreen
            android:key="pref_sign_out"
            android:title="@string/pref_title_sign_out"
            android:summary="@string/pref_summary_sign_out" />

        <PreferenceScreen
            android:key="pref_delete"
            android:title="@string/pref_title_delete"
            android:summary="@string/pref_summary_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_title_notifications">

        <ListPreference
            android:key="pref_vibrate_tune"
            android:summary="%s"
            android:title="@string/pref_title_vibrate_tune"
            android:defaultValue="STANDARD"
            android:entries="@array/pref_entries_vibrate_tunes"
            android:entryValues="@array/pref_entry_values_vibrate_tunes" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_title_about">

        <PreferenceScreen
            android:key="pref_licenses"
            android:title="@string/pref_title_licenses" />

        <PreferenceScreen
            android:key="pref_build"
            android:title="@string/pref_title_build" />

    </PreferenceCategory>

</PreferenceScreen>