<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/nav_unlock"
        android:enabled="true"
        android:icon="@drawable/ic_lock_open_black_24dp"
        android:title="@string/menu_unlock"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/nav_logs"
        android:enabled="true"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/menu_logs"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/nav_camera"
        android:enabled="true"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/menu_camera"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
</menu>